# sidex

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  justfile  package.nix  result  rustfmt.toml  sidex.code-workspace
.github/workflows/: buid-website.yml  run-checks.yml
crates/: README.md
crates/sidex/: Cargo.toml  README.md
crates/sidex-any/: Cargo.toml
crates/sidex-attrs/: Cargo.toml  README.md
crates/sidex-attrs-http/: Cargo.toml
crates/sidex-attrs-json/: Cargo.toml  README.md
crates/sidex-attrs-rust/: Cargo.toml  README.md
crates/sidex-attrs-rust/src/: lib.rs
crates/sidex-build-rs/: Cargo.toml  README.md
crates/sidex-build-rs/src/: lib.rs  utils.rs
crates/sidex-cli/: Cargo.toml  README.md
crates/sidex-cli/src/: commands.rs  main.rs  utils.rs
crates/sidex-cli/src/commands/: check.rs  generate.rs  mod.rs  new.rs  validate_ir.rs
crates/sidex-core/: Cargo.toml  README.md
crates/sidex-core/src/: builtins.rs  bundle.rs  diagnostics.rs  ir.rs  lib.rs  model.rs  transformer.rs  utils.rs
crates/sidex-core/src/elaborate/: mod.rs
crates/sidex-core/src/ir/: generated.rs
crates/sidex-core/src/model/: builtins.rs
crates/sidex-derive-mutation/: Cargo.toml
crates/sidex-derive-mutation/src/: lib.rs
crates/sidex-diagnostics/: Cargo.toml  README.md
crates/sidex-diagnostics/src/: lib.rs  render.rs
crates/sidex-gen/: Cargo.toml
crates/sidex-gen-ir/: Cargo.toml
crates/sidex-gen-json-schema/: Cargo.toml
crates/sidex-gen-json-schema/src/: builder.rs  lib.rs
crates/sidex-gen-openapi/: Cargo.toml
crates/sidex-gen-openapi/src/: lib.rs
crates/sidex-gen-openapi/tests/petstore/: README.md
crates/sidex-gen-openapi/tests/petstore/parts/: parameter.json  response.json
crates/sidex-gen-rs/: Cargo.toml  README.md
crates/sidex-gen-rs/src/: config.rs  context.rs  lib.rs  plugins.rs
crates/sidex-gen-rs/src/plugins/: builder.rs  data_types.rs  interfaces.rs  serde.rs  types.rs
crates/sidex-gen-rs/src/plugins/serde/: identifier_enum.rs  variant_type.rs  wrapper_type.rs
crates/sidex-gen-rs/src/plugins/serde/record_type/: de.rs  ser.rs
crates/sidex-gen-rs/src/plugins/serde/variant_type/: de.rs  ser.rs
crates/sidex-gen-rs/src/rstyir/: mod.rs
crates/sidex-gen-rs/src/rstyir/serde/: identifier_enum.rs  mod.rs  record_type.rs
crates/sidex-gen-rs/src/rstyir/serde/record_type/: de.rs  ser.rs
crates/sidex-gen-rs/src/rstyir/serde/variant_type/: de.rs  ser.rs
crates/sidex-gen-ts/: Cargo.toml  README.md
crates/sidex-gen-ts/src/: config.rs  context.rs  lib.rs  plugins.rs
crates/sidex-gen-ts/src/plugins/: types.rs
crates/sidex-gen/src/: lib.rs  rename.rs
crates/sidex-ir/: Cargo.toml  README.md
crates/sidex-ir/src/: generated.rs  lib.rs
crates/sidex-language-server/: Cargo.toml
crates/sidex-language-server/src/: main.rs  semantic_tokens.rs
crates/sidex-macros/: Cargo.toml
crates/sidex-macros/src/: lib.rs
crates/sidex-rpc/: Cargo.toml  README.md  build.rs  sidex.toml
crates/sidex-rpc-core/: Cargo.toml
crates/sidex-rpc-core/src/: codec.rs  error.rs  extensions.rs  lib.rs  request.rs  response.rs
crates/sidex-rpc/schemas/: protocol.sidex
crates/sidex-rpc/src/: lib.rs  transport.rs
crates/sidex-serde/: Cargo.toml  README.md
crates/sidex-serde-tests/: Cargo.toml  README.md  build.rs
crates/sidex-serde-tests/src/: lib.rs
crates/sidex-serde/src/: builtins.rs  de.rs  lib.rs  ser.rs
crates/sidex-serde/src/de/: content.rs  tagged.rs
crates/sidex-serde/src/de/content/: ours.rs  theirs.rs
crates/sidex-serde/src/ser/: map.rs  record.rs  variant.rs
crates/sidex-syntax/: Cargo.toml  README.md
crates/sidex-syntax/src/: ast.rs  errors.rs  lib.rs  parser.rs  reporting.rs  source.rs  span.rs  tokens.rs
crates/sidex-syntax/src/snapshots/: sidex_syntax__parser__tests__test_multi_ids.snap  sidex_syntax__parser__tests__test_multi_person.snap  sidex_syntax__parser__tests__test_multi_service.snap  sidex_syntax__parser__tests__test_single_ids.snap  sidex_syntax__parser__tests__test_single_person.snap  sidex_syntax__parser__tests__test_single_task.snap  sidex_syntax__parser__tests__test_todo_list_api_manager.snap  sidex_syntax__parser__tests__test_todo_list_api_manager.snap.new  sidex_syntax__parser__tests__test_todo_list_data_ids.snap  sidex_syntax__parser__tests__test_todo_list_data_person.snap  sidex_syntax__parser__tests__test_todo_list_data_task.snap  sidex_syntax__tokens__tests__test_multi_ids.snap  sidex_syntax__tokens__tests__test_multi_person.snap  sidex_syntax__tokens__tests__test_multi_service.snap  sidex_syntax__tokens__tests__test_single_ids.snap  sidex_syntax__tokens__tests__test_single_person.snap  sidex_syntax__tokens__tests__test_single_task.snap  sidex_syntax__tokens__tests__test_todo_list_api_manager.snap  sidex_syntax__tokens__tests__test_todo_list_api_manager.snap.new  sidex_syntax__tokens__tests__test_todo_list_data_ids.snap  sidex_syntax__tokens__tests__test_todo_list_data_person.snap  sidex_syntax__tokens__tests__test_todo_list_data_task.snap
crates/sidex-types-json-schema/: Cargo.toml
crates/sidex-types-json-schema/src/: lib.rs
crates/sidex-types-openapi/: Cargo.toml
crates/sidex-types-openapi/src/: lib.rs
crates/sidex-value/: Cargo.toml  README.md
crates/sidex/src/: interfaces.rs  json.rs  lib.rs  mutations.rs
editors/: README.md
editors/vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  sidex-grammar.tmGrammar.json  sidex-language-configuration.json  tsconfig.json  webpack.config.js
examples/: README.md
examples/petstore/rust-backend/: Cargo.toml  build.rs
examples/petstore/rust-backend/src/: lib.rs
examples/rust-embed-macro/: Cargo.toml  build.rs
examples/rust-embed-macro/src/: main.rs
examples/todo-list/todo_list_backend/: Cargo.toml  README.md  build.rs  client.sh
examples/todo-list/todo_list_backend/src/: main.rs
languages/: README.md
languages/rust/: sidex  (+2 more)
languages/rust/sidex/: Cargo.toml
languages/rust/sidex/src/: lib.rs
lib/: README.md
tests/: README.md
www/: README.md  docusaurus.config.js  package-lock.json  package.json
(+165 files in other folders)
