[workspace]
resolver = "2"
members = ["crates/*", "examples/petstore/rust-backend", "examples/todo-list/todo_list_backend"]

[workspace.package]
# We have no `version` here because the different crates can evolve independently.
edition = "2024"
authors = ["Silitics GmbH <info@silitics.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/silitics/sidex"
homepage = "https://oss.silitics.com/sidex"

[workspace.dependencies]
sidex-rpc = { path = "crates/sidex-rpc" }
sidex-rpc-core = { path = "crates/sidex-rpc-core" }