[package]
name = "sidex-attrs-rust"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

sidex-ir = { path = "../sidex-ir" }
sidex-attrs = { path = "../sidex-attrs" }
sidex-diagnostics = { path = "../sidex-diagnostics" }