[package]
name = "sidex-cli"
description = "Command line interface for Sidex."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "sidex"
path = "src/main.rs"

[dependencies]
# Rust framework for Sidex.
sidex-core = { path = "../sidex-core", version = "^0.1" }
sidex-gen-rs = { path = "../sidex-gen-rs", version = "^0.1" }
sidex-gen-ts = { path = "../sidex-gen-ts", version = "^0.1" }
# Required for parsing the command line arguments.
clap = { version = "^3.2", features = ["derive"] }
# Required for nice and colorful error reporting.
eyre = "^0.6"
color-eyre = "^0.6"
# Required for terminal colors.
yansi = "^0.5"

toml = "^0.5"