[package]
name = "sidex-cli"
description = "The Sidex command line tool."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "sidex"
path = "src/main.rs"

[dependencies]
# Rust framework for Sidex.
sidex-core = { path = "../sidex-core", version = "^0.1" }
sidex-gen = { path = "../sidex-gen", version = "0.1" }
sidex-gen-ir = { path = "../sidex-gen-ir", version = "^0.1" }
sidex-gen-rs = { path = "../sidex-gen-rs", version = "^0.1" }
sidex-gen-ts = { path = "../sidex-gen-ts", version = "^0.1" }
sidex-gen-openapi = { path = "../sidex-gen-openapi", version = "^0.1" }
sidex-gen-json-schema = { path = "../sidex-gen-json-schema", version = "^0.1" }
sidex-diagnostics = { path = "../sidex-diagnostics" }
sidex-derive-mutation = { path = "../sidex-derive-mutation" }
# Required for parsing the command line arguments.
clap = { version = "4.0", features = ["derive"] }
# Required for nice and colorful error reporting.
eyre = "^0.6"
color-eyre = "^0.6"
# Required for terminal colors.
yansi = "^0.5"
serde_json = "1"

toml = "^0.5"