[package]
name = "sidex-core"
description = "The core of Sidex."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Required for serialization and deserialization of metadata.
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
toml = "^0.5"
thiserror = "1"
# Required for parsing Sidex models.
chumsky = "^0.8"
# Required for nice and colorful error reporting.
ariadne = "^0.1"
eyre = "^0.6"
# Required for caching.
once_cell = "^1.13"
lazy_static = "^1.4"
# Required for internal maps.
hashbrown = "^0.12"
# Lexer, parser, and ASTs for Sidex schemas.
sidex-syntax = { version = "0.2", path = "../sidex-syntax" }  # PRIVATE

[dev-dependencies]
# Required for snapshot testing.
insta = "1.15.0"