[package]
name = "sidex-core"
description = "The core of Sidex."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Required for serialization and deserialization of metadata.
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
toml = "^0.5"
thiserror = "1"
# Required for nice and colorful error reporting.
eyre = "^0.6" # PRIVATE
# Required for caching.
once_cell = "^1.13"  # PRIVATE
lazy_static = "^1.4" # PRIVATE
# Required for internal maps.
hashbrown = "^0.13" # PRIVATE
# Lexer, parser, and ASTs for Sidex schemas.
sidex-syntax = { version = "0.2", path = "../sidex-syntax" } # PRIVATE
# Parallel processing of schemas.
rayon = "1.5"  # PRIVATE


# Required for rendering diagnostics.
ariadne = "0.1"  # PRIVATE
# Required for theard-local diagnostic contexts.
scoped-tls = "1"  # PRIVATE
# Required for locks and other concurreny primitives.
parking_lot = "0.12"  # PRIVATE

[dev-dependencies]
# Required for snapshot testing.
insta = "1.15.0"
