[package]
name = "sidex-derive-mutation"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sidex-ir = { path = "../sidex-ir", version = "^0.2" }
sidex-diagnostics = { path = "../sidex-diagnostics" }
sidex-attrs = { path = "../sidex-attrs" }
sidex-gen = { path = "../sidex-gen" }