[package]
name = "sidex-diagnostics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# The diagnostic functionality from `sidex_core` are re-exported in this crate.
sidex-core = { path = "../sidex-core" }