[package]
name = "sidex-diagnostics"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Required for rendering diagnostics.
ariadne = "0.1"  # PRIVATE
# Required for theard-local diagnostic contexts.
scoped-tls = "1"  # PRIVATE
# Required for locks and other concurreny primitives.
parking_lot = "0.12"  # PRIVATE