[package]
name = "sidex-gen-json-schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }  # PUBLIC
sidex-serde = { path = "../sidex-serde" }
indexmap = { version = "2.0.0", features = ["serde"] }
serde_json = "1"
sidex-gen = { path = "../sidex-gen", version = "0.1" }
sidex-attrs-json = { version = "0.1.0", path = "../sidex-attrs-json" }