[package]
name = "sidex-gen-openapi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }  # PUBLIC
sidex-serde = { path = "../sidex-serde" }
sidex-gen = { path = "../sidex-gen", version = "0.1" }
serde_json = "1"
serde_yaml = "0.9"
sidex-attrs-http = { version = "0.1.0", path = "../sidex-attrs-http" }
indexmap = { version = "2.0.0", features = ["serde"] }
