[package]
name = "sidex-gen-rs"
description = "Sidex code generator for Rust."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Required for code generation.
sidex-gen = { path = "../sidex-gen", version = "^0.1" }
# Required for generating Rust code.
proc-macro2 = "^1"
quote = "^1"
serde = "1"
syn = { version = "^1", features = ["derive", "parsing"] }
sidex-attrs-rust = { path = "../sidex-attrs-rust" }
sidex-syntax = { path = "../sidex-syntax" }