[package]
name = "sidex-gen-ts"
description = "Sidex code generation for TypeScript."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Sidex core data structures and functions.
sidex-core = { path = "../sidex-core", version = "^0.1" }
# Required for generating TypeScript code.
proc-macro2 = "^1"
quote = "^1"
