[package]
name = "sidex-gen"
description = "Code generation framework for Sidex definitions."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1"
sidex-ir = { path = "../sidex-ir", version = "^0.2" }
sidex-diagnostics = { path = "../sidex-diagnostics" }
serde_json = "1"
sidex-attrs = { path = "../sidex-attrs" }