[package]
name = "sidex-ir"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Required for serializing and deserializing Sidex IR.
serde = { version = "1", features = ["derive"] }  # PUBLIC
# Required for serializing and deserializing Sidex IR.
sidex-serde = { path = "../sidex-serde" }
