[package]
name = "sidex-language-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sidex-core = { path = "../sidex-core" }
ropey = "^1.5"
tokio = { version = "^1", features = ["full"] }
tower-lsp = "^0.17"
url = "^2.2"
dashmap = "^5.3"
# Lexer, parser, and ASTs for Sidex schemas.
sidex-syntax = { version = "0.2", path = "../sidex-syntax" }