[package]
name = "sidex-rpc-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bytes = "1.10"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
