[package]
name = "sidex-rpc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = "^1"
futures = "^0.3"
sidex-serde = { path = "../sidex-serde" }
pin-project = "1"

[build-dependencies]
sidex-build-rs = { path = "../sidex-build-rs" }