[package]
name = "sidex-serde"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = "1"
# Required for serializing and deserializing Base64 encoded bytes.
base64 = "0.20"  # PRIVATE

[features]
serde-private-content = []
default = []