[package]
name = "sidex-types-json-schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
indexmap = { version = "2.10.0", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.140"

sidex-serde.workspace = true
