[package]
name = "sidex-types-openapi"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sidex-serde.workspace = true
serde.workspace = true
sidex-types-json-schema.workspace = true
indexmap = { version = "2.10.0", features = ["serde"] }
