[package]
name = "sidex"
description = "A format- and language-agnostic data modeling and API definition framework."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1"
# Procedural macros for Sidex.
sidex-macros = { path = "../sidex-macros", version = "^0.1", optional = true }
sidex-serde = { path = "../sidex-serde", optional = true }
sidex-rpc = { path = "../sidex-rpc", optional = true }
futures = { version = "*", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true }

[features]
default = ["macros", "serde", "rpc", "json"]
macros = ["sidex-macros"]
serde = ["sidex-serde", "dep:serde"]
rpc = ["futures", "serde", "sidex-rpc"]
json = ["serde_json"]
