[package]
name = "sidex"
description = "A format- and language-agnostic data modeling and API definition framework."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1"
sidex-serde = { path = "../sidex-serde" }
futures = { version = "*", optional = true }
serde_json = { version = "1" }
serde = { version = "1" }

[features]
serde = []