[package]
name = "rust-embed-macro"
description = "Example for embedding a Sidex model with a macro."
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Required for the Sidex macro.
sidex = { path = "../../crates/sidex", features = ["macros"] }
sidex-serde = { path = "../../crates/sidex-serde" }
serde = "1"
# Used by the Sidex model.
uuid = { version = "^1.1", features = ["serde"] }
