[package]
name = "petstore-rust-backend"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
sidex = { version = "0.1.0", path = "../../../crates/sidex" }

[build-dependencies]
sidex-build-rs = { path = "../../../crates/sidex-build-rs" }
