[package]
name = "sidex"
description = "A format- and language-agnostic data modeling and API definition framework."
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Procedural macros for Sidex.
sidex-macros = { path = "../sidex-macros", version = "^0.1", optional = true }

[features]
macros = ["sidex-macros"]
